2007-08-14  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py: Even more work in progress.

2007-08-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: improve FAM structure

2007-08-12  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: LANG values, additional
	refactoring
	
2007-08-12  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: remove unused options,
	handle source TEXT

2007-08-12  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py: More work in progress.

2007-08-11  Brian Matherly <brian@gramps-project.org>
	* src/plugins/FamilyGroup.py: Add attributes

2007-08-11  Brian Matherly <brian@gramps-project.org>
	* src/plugins/DetAncestralReport.py: Add attributes

2007-08-11  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Add event attributes

2007-08-11  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Convert to use PrivateProxyDb
	* src/ReportBase/_ReportUtils.py: remove "sanitize" functions.

2007-08-11  Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_PrivateProxyDb.py: Continued work.

2007-08-11  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py: Work in progress.

2007-08-09  Don Allingham  <don@gramps-project.org>
	* GrampsDbUtils/_WriteGedcom.py: use utf8 encoding only
	* GrampsDbUtils/gedcomexport.glade:  use utf8 encoding only

2007-08-09  Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_PrivateProxyDb.py: Continued work.

2007-08-08  Don Allingham  <don@gramps-project.org>
	* src/Exporter.py: remove GRDB export
	* src/GrampsDbUtils/_WriteGedcom.py: write NOTE instances as references
	instead of inline. This will allow notes to be shared in the future. Handle
	CONC/CONT in a cleaner manner.

2007-08-08  Brian Matherly <brian@gramps-project.org>